--- a/css/style.css
+++ b/css/style.css
@@ -53,20 +53,191 @@
   margin: 0 0 40px 0;
 }
 
-.frase a{
+.fale-conosco{
   width: 200px;
   padding: 10px 25px 10px 25px;
   margin: 0 auto 0 auto;
   border-radius: 10px;
   background-color: #3c184e;
+}
+
+.fale-conosco a{
   font-size: 20px;
   text-align: center;
   text-decoration: none;
   color: #ffff;
-
 }
 
-.frase img{
+.fale-conosco img{
   width: 20px;
   margin: 0 auto 0 auto;
+}
+
+.servicos{
+  width: 100%;
+  padding: 120px 80px;
+}
+
+.servicos h3{
+  font-size: 36px;
+  color: #3c184e;
+  text-align: center;
+  margin: 0 0 45px 0;
+}
+
+.lista {
+  max-width: 800px;
+  margin: 0 auto 50px auto;
+  color: #3c184e;
+}
+
+.lista li{
+  font-size: 20px;
+  margin: 20px 0 0 0;
+}
+
+.lista li span{
+  font-weight: 700;
+  font-style: italic;
+}
+
+.imagens{
+  max-width: 800px;
+  margin: 20px auto 0 auto;
+  text-align: center;
+}
+
+.imagens img{
+  border-radius: 5px;
+  box-shadow: 3px 6px 10px 6px #0000005c;
+}
+
+.redes-sociais{
+  padding: 120px 80px;
+  background-color: #3c184e;
+  text-align: center;
+}
+
+.redes-sociais p{
+  max-width: 800px;
+  margin: 0 auto 50px auto;
+  font-size: 40px;
+  color: #ffff;
+  text-align: center;
+}
+
+.redes-sociais p span{
+  font-weight: 700;
+  font-style: italic;
+}
+
+.imagens-redes a{
+  text-decoration: none;
+  margin: 0 20px;
+}
+
+.imagens-redes img{
+  width: 50px;
+  height: 50px;
+}
+
+.marcas {
+  width: 100%;
+  padding: 120px 80px;
+  margin: 0 auto 0 auto;
+}
+
+.marcas h3{
+  font-size: 36px;
+  color: #3c184e;
+  text-align: center;
+  margin: 0 0 45px 0;
+}
+
+.marcas1 , .marcas2 , .marcas3 {
+  max-width: 800px;
+  margin: 0 auto 0 auto;
+}
+
+.marcas1 img{
+  width: 148px;
+  height: 148px;
+  margin: 15px;
+}
+
+.marcas2 img{
+  width: 148px;
+  height: 148px;
+  margin: 15px;
+}
+
+.marcas3 img{
+  width: 148px;
+  height: 148px;
+  margin: 15px;
+}
+
+.redes-sociais2{
+  padding: 120px 80px;
+  background-color: #3c184e;
+  text-align: center;
+}
+
+.redes-sociais2 p{
+  max-width: 800px;
+  margin: 0 auto 50px auto;
+  font-size: 40px;
+  color: #ffff;
+  text-align: center;
+}
+
+.redes-sociais2 p span{
+  font-weight: 700;
+  font-style: italic;
+}
+
+.localizacao {
+  width: 100%;
+  padding: 120px 80px;
+  text-align: center;
+}
+
+.localizacao h3 {
+  font-size: 36px;
+  color: #3c184e;
+  text-align: center;
+  margin: 0 0 45px 0;
+}
+
+.localizacao p{
+  font-size: 20px;
+  color: #3c184e;
+  text-align: center;
+  margin: 0 0 45px 0;
+}
+
+.localizacao iframe{
+  width: 800px;
+  height: 450px;
+}
+
+.rodape{
+  width: 100%;
+  padding: 10px 0 10px 0;
+  background-color: #3c184e;
+}
+
+.rodape p{
+  font-size: 12px;
+  color: #ffff;
+  text-align: center;
+}
+
+.rodape a{
+  text-decoration: none;
+  color: #ffff;
+}
+
+.rodape img{
+  width: 20px;
 }
